// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingData in all North-America and Europe AWS Regions can query cross-region 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://ca-central-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-central-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-north-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-south-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-west-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-west-3-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-east-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-east-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-west-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-west-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 2`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 3`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 4`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 5`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 6`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 7`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 8`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 9`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 10`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 11`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData with S3 folders run single query on S3 folder with 2 copies of the same parquet file 1`] = `
Array [
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": 1454475931000,
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": 1454475931000,
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": 1454459781000,
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": 1454459781000,
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": 1454461771000,
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": 1454461771000,
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
]
`;

exports[`boilingdata with DuckDB run all meta queries 1`] = `
Array [
  Array [],
  Array [
    Object {
      "CreationDate": "2021-12-06T12:06:12.060Z",
      "Name": "boilingdata-demo",
    },
  ],
  Array [
    Object {
      "awsAccountId": "589434896614",
      "externalId": "OPL0DcV9pKiQg7/YXxiKQkwOmYQk7wj9FoBS4P7GNI8=",
    },
  ],
  Array [
    Object {
      "pragma": "s3AccessRoleArn='arn:aws:iam::123456789012:role/EXAMPLE';",
    },
  ],
  Array [
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo.parquet",
      "LastModified": "2022-06-18T10:14:03.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo2.parquet",
      "LastModified": "2022-06-18T10:14:24.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"85669ad1c741265a227e6eafc53cac62-43\\"",
      "Key": "demo4.duckdb.zst",
      "LastModified": "2022-06-18T10:55:23.000Z",
      "Size": 359243721,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"19c7dc463166dd08c931736ad9048a35\\"",
      "Key": "test.parquet",
      "LastModified": "2022-05-23T16:37:00.000Z",
      "Size": 2783,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "cc-demo",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "uploads",
      "Size": 0,
      "StorageClass": "",
    },
  ],
]
`;

exports[`boilingdata with DuckDB run multi-key query 1`] = `
Array [
  Object {
    "count": 28160000,
    "key": "s3://boilingdata-demo/demo.parquet",
  },
  Object {
    "count": 28160000,
    "key": "s3://boilingdata-demo/demo2.parquet",
  },
]
`;

exports[`boilingdata with DuckDB run single query 1`] = `
Array [
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556669808000,
    "tpep_pickup_datetime": 1556669690000,
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556671047000,
    "tpep_pickup_datetime": 1556670954000,
    "trip_distance": 1.5,
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor (offset) 1`] = `
Array [
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": 1454459781000,
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": 1454475931000,
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "2/25/1983",
    "cc": "3583136326049310",
    "comments": "",
    "country": "Indonesia",
    "email": "kwhite5@google.com",
    "first_name": "Kathryn",
    "gender": "Female",
    "id": 6,
    "ip_address": "195.131.81.179",
    "last_name": "White",
    "registration_dttm": 1454484154000,
    "salary": 69227.11,
    "title": "Account Executive",
  },
  Object {
    "birthdate": "12/18/1987",
    "cc": "3582641366974690",
    "comments": "",
    "country": "Portugal",
    "email": "sholmes6@foxnews.com",
    "first_name": "Samuel",
    "gender": "Male",
    "id": 7,
    "ip_address": "232.234.81.197",
    "last_name": "Holmes",
    "registration_dttm": 1454488388000,
    "salary": 14247.62,
    "title": "Senior Financial Analyst",
  },
  Object {
    "birthdate": "3/1/1962",
    "cc": "",
    "comments": "",
    "country": "Bosnia and Herzegovina",
    "email": "hhowell7@eepurl.com",
    "first_name": "Harry",
    "gender": "Male",
    "id": 8,
    "ip_address": "91.235.51.73",
    "last_name": "Howell",
    "registration_dttm": 1454482026000,
    "salary": 186469.43,
    "title": "Web Developer IV",
  },
  Object {
    "birthdate": "3/27/1992",
    "cc": "",
    "comments": "1E+02",
    "country": "South Korea",
    "email": "jfoster8@yelp.com",
    "first_name": "Jose",
    "gender": "Male",
    "id": 9,
    "ip_address": "132.31.53.61",
    "last_name": "Foster",
    "registration_dttm": 1454471573000,
    "salary": 231067.84,
    "title": "Software Test Engineer I",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": 1454524187000,
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor over the size 1`] = `Array []`;

exports[`boilingdata with Glue Tables can do partition filter push down 1`] = `
Array [
  Object {
    "count": 370164,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00268-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 370164,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00268-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 370330,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00269-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 370330,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00269-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 370214,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00270-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
]
`;

exports[`boilingdata with Glue Tables can read S3 Keys from Glue Table 1`] = `
Array [
  Object {
    "count": 372459,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00000-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 372459,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00000-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 372633,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00001-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 372633,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00001-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 372654,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00002-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
]
`;

exports[`boilingdata with SQLite3 run single query 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
]
`;

exports[`boilingdata with SQLite3 run single query, same one, 2nd time 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
]
`;

exports[`boilingdata with promise method can run simple promise based query 1`] = `
Array [
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556669808000,
    "tpep_pickup_datetime": 1556669690000,
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556671047000,
    "tpep_pickup_datetime": 1556670954000,
    "trip_distance": 1.5,
  },
]
`;
